--- a/Prototyping/table-test.html
+++ b/Prototyping/table-test.html
@@ -10,16 +10,20 @@
 <table>
     <thead>
     <tr>
-        <th>chapter 1</th>
-        <th>chapter 2</th>
-        <th>chapter 3</th>
-        <th>chapter 4</th>
-        <th>chapter 5</th>
-        <th>chapter 6</th>
-        <th>chapter 7</th>
-        <th>chapter 8</th>
-        <th>chapter 9</th>
-        <th>chapter 10</th>
+        <th class="head1-blank">Blank</th>
+        <th colspan="9" class="head1">Book1</th>
+    </tr>
+    <tr>
+        <th class="head2-blank">Blank</th>
+        <th class="head2">chapter 2</th>
+        <th class="head2">chapter 3</th>
+        <th class="head2">chapter 4</th>
+        <th class="head2">chapter 5</th>
+        <th class="head2">chapter 6</th>
+        <th class="head2">chapter 7</th>
+        <th class="head2">chapter 8</th>
+        <th class="head2">chapter 9</th>
+        <th class="head2">chapter 10</th>
     </tr>
     </thead>
     <tbody>
